test/classes/errors/nilability-init-field-arg/init-field-arg-nonnil-shared-from-oknil-shared.good
init-field-arg-nonnil-shared-from-oknil-shared.chpl:9: In initializer:
init-field-arg-nonnil-shared-from-oknil-shared.chpl:10: error: invalid copy-initialization
init-field-arg-nonnil-shared-from-oknil-shared.chpl:10: error: cannot coerce 'shared MyClass?' to 'shared MyClass' in initialization
